--- a/HomePage.css
+++ b/HomePage.css
@@ -41,10 +41,10 @@ h3,p{
   	
   	position: fixed; /* Fixed/sticky position */
   	margin-top: 2%; /* Place the button at the bottom of the page */
-  	margin-left: 95%; /* Place the button 30px from the right */
+  	margin-left: 92.5%; /* Place the button 30px from the right */
   	z-index: 30; /* Make sure it does not overlap */
-	width: 4%;
-	padding-bottom: 4%;
+	width: 5%;
+	padding-bottom: 5%;
 	border-radius: 50%;
   	border: none; /* Remove borders */
   	outline: none; /* Remove outline */
@@ -52,10 +52,13 @@ h3,p{
 	opacity: 0;
   
 	transition: background-color 200ms,transform 1s; 
-	
+	display: none;
 	
 }
-
+.myBtn.show{
+	opacity: 1;
+	display: block;
+}
 .myBtn.open{
 	background-color: #f0a550;
 	transform: scale(120);
@@ -100,20 +103,25 @@ h3,p{
 .AllCross{
 	position: fixed;
 	z-index: 35;
-	width: 4%;
-	padding-bottom: 4%;
-	margin-left: 95%;
+	width: 5%;
+	padding-bottom: 5%;
+	margin-left: 92.5%;
 	margin-top: 2%;
 	border-radius: 50%;
 	opacity: 0;
+	display: none;
 	
 	
+}
+.AllCross.open{
+	opacity: 1;
+	display: block;
 }
 .Cross1{
 	position: fixed;
 	z-index: 40;
-	margin-top: 1.3%;
-	margin-left: 0.70%;
+	margin-top: 1.7%;
+	margin-left: 1.125%;
 	width: 2.6%;
 	padding-bottom: 0.25%;
 	border-radius: 3px 3px 3px 3px;
@@ -123,13 +131,13 @@ h3,p{
 
 }
 .Cross1.open{
-	margin-top: 1.8%;
+	margin-top: 2.3%;
 	transform: rotate(45deg);
 }
 .Cross2{
 	position: fixed;	
-	margin-top: 1.8%;
-	margin-left: 0.70%;
+	margin-top: 2.3%;
+	margin-left: 1.125%;
 	width: 2.6%;
 	padding-bottom: 0.25%;
 	border-radius: 3px 3px 3px 3px;
@@ -142,8 +150,8 @@ h3,p{
 }
 .Cross3{
 	position: fixed;	
-	margin-top: 2.3%;
-	margin-left: 0.70%;
+	margin-top: 2.9%;
+	margin-left: 1.125%;
 	width: 2.6%;
 	padding-bottom: 0.25%;
 	border-radius: 3px 3px 3px 3px;
@@ -152,7 +160,7 @@ h3,p{
 	transition: 0.5s; 
 }
 .Cross3.open{
-	margin-top: 1.8%;
+	margin-top: 2.3%;
 	transform: rotate(-45deg);
 }
 .allpg{
@@ -597,27 +605,34 @@ h3,p{
 	.Ab{
 		font-size: 16px;
 	}
+	
 	.myBtn{
-		width: 12%;
+	/*	width: 12%;
 		padding-bottom: 12%;
 		margin-left: 85%;
 		margin-top: 6%;
+	*/
+		opacity: 1;
+		display: block;
 	}
-	
+	/*
 	.MenuContent{
 		margin-top: 15%;
 	}
+	*/
 	.AllCross{
 		
-		width: 12%;
+	/*	width: 12%;
 		padding-bottom: 12%;
 		margin-left: 85%;
 		margin-top: 6%;
 		border-radius: 50%;
-		opacity: 0;
+	*/
+		opacity: 1;
+		display: block;
 		
 	}
-	
+	/*
 	.Cross1{
 		
 		margin-top: 4.4%;
@@ -653,7 +668,7 @@ h3,p{
 		margin-top: 5.6%;
 		transform: rotate(-45deg);
 	}
-	
+	*/
 }
 
 @media (min-width: 100px) and (max-width: 376px){
@@ -663,10 +678,13 @@ h3,p{
 		font-size: 10px;
 	}
 	.myBtn{
-		width: 12%;
+	/*	width: 12%;
 		padding-bottom: 12%;
 		margin-left: 85%;
 		margin-top: 6%;
+	*/
+		opacity: 1;
+		display: block;
 	}
 	.MenuBtn{
 		font-size: 16px;
@@ -674,20 +692,24 @@ h3,p{
 	.Ab{
 		font-size: 12px;
 	}
+	/*
 	.MenuContent{
 		margin-top: 12%;
 	}
+	*/
 	.AllCross{
 		
-		width: 12%;
+	/*	width: 12%;
 		padding-bottom: 12%;
 		margin-left: 85%;
 		margin-top: 6%;
 		border-radius: 50%;
-		opacity: 0;
+	*/	
+		opacity: 1;
+		display: block;
 		
 	}
-	
+	/*
 	.Cross1{
 		
 		margin-top: 4.4%;
@@ -723,5 +745,5 @@ h3,p{
 		margin-top: 5.6%;
 		transform: rotate(-45deg);
 	}
-	
+	*/
 }
