--- a/網頁/AttackPage/AtackPagePart3.css
+++ b/網頁/AttackPage/AtackPagePart3.css
@@ -1,23 +1,26 @@
 @charset "utf-8";
 .bg3{
 	position: absolute;
-	z-index: 10;
-	left: 0px;
-	top: 2156px;
+	z-index: -1;
+	left: 0%;
+	width: 100%;
+	opacity: 1;
+	margin-top: 112%;
+	padding-bottom: 56%;
 }
 .tube{
 	position: absolute;
 	z-index: 11;
-	left: 0px;
-	top: 2180px;
+	margin-left: 0%;
+	margin-top: 1%;
 }
 
 .indoor{
 	position: absolute;
 	z-index: 11;
-	left: 540px;
-	top: 2120px;
-	width: 500px;
+	margin-left: 28.125%;
+	margin-top: -2%;
+	width: 26.04%;
 	color: #ffffff;
 	font-size: 48px;
 	font-weight: bold;
@@ -26,19 +29,19 @@
 .indoorline{
 	z-index: 11;
 	position: absolute;
-	width: 5px;
-	height: 100px;
-	border-radius: 10px;
+	width: 1%;
+	padding-bottom: 20%;
+	border-radius: 5px;
 	background-color: #fff;
-	top: 85px;
-	left: 360px;
+	margin-top: -37.5%;
+	margin-left: 72.5%;
 }
 .indoorpra{
 	position: absolute;
 	font-size: 24px;
-	top: 75px;
-	left: 380px;
-	width: 500px;
+	width: 100%;
+	margin-left: 75%;
+	margin-top: -40%;
 	text-align: left;
 	font-weight: normal;
 
@@ -46,77 +49,64 @@
 .Longtime{
 	position: absolute;
 	z-index: 12;
-	top: 2500px;
-	left: 1200px;
+	margin-top: 18%;
+	margin-left: 62.5%;
 	color: #ffffff;
 	font-weight: 400;
 	font-size: 18px;
 }
-.LongtimeShapeR{
+.LongtimeShapeRT{
 	position: absolute;
 	z-index: 13;
-	top: 2510px;
-	left: 680px;
-	width: 448px;
-	height: 178px;
-	border-style: solid;
-	border-width: 0 15px 0 0 ;
-	border-color: #e4912b;
+	margin-top: 18%;
+	margin-left: 32%;
+	width: 25%;
+	
 	
 }
-.LongtimeShapeT{
-	position: absolute;
-	z-index: 13;
-	top: 2510px;
-	left: 1143px;
-	width: 0;
-	height: 0;
-	border-style: solid;
-	border-width: 89px 0 89px 10px;
-	border-color: transparent transparent transparent #e4912b;
 
-}
 .Barchart{
 	position: absolute;
 	z-index: 12;
-	top: 2500px;
+	margin-top: 20%;
 	left: 0px;
+	width: 100%;
+	border: 2px solid red;
 }
 .Bar350{
 	position: absolute;
-	top: 0px;
-	left: 0px;
-	width: 13.5px;
-	height: 28px;
+	margin-top: 0%;
+	margin-left: 0%;
+	width: 0.7%;
+	padding-bottom: 1.5%;
 	background-color: #1C623F;
 	opacity: 1;
 }
 .Bar350:before{
 	position: absolute;
 	content: "";
-	top: 0px;
-	left: 0px;
-	z-index: 11;
-	width: 39.5px;
-	height: 28px;
+	width: 285%;
+	padding-bottom: 220%;
 	background-color: rgba(28,98,63,0.5);
 	
 }
 .Bar350content{
 	position: absolute;
-	z-index: 13;
+	z-index: 12;
 	color: #ffffff;
-	top: -35px;
-	left: 20px;
+	margin-left: 2.5%;
+	margin-top: -2%;
 	line-height: 0.8;
 }
-
+.Bar350value{
+	margin-left: -20%;
+}
 .Bar1000{
 	position: absolute;
-	top:84px;
-	left: 0px;
-	width: 39.5px;
-	height: 28px;
+	margin-top: 4.5%;
+	margin-left: 0%;
+	width: 2%;
+	padding-bottom: 1.5%;
 	background: #518551 0% 0% no-repeat padding-box;
 	opacity: 1;
 	
@@ -124,57 +114,58 @@
 .Bar1000:before{
 	position: absolute;
 	content: "";
-	top: 0px;
-	left: 0px;
-	z-index: 11;
-	width: 79px;
-	height: 28px;
+	width: 200%;
+	padding-bottom: 75%;
 	background-color: rgba(81,136,81,0.2);
 	
 }
 .Bar1000content{
-	position: relative;
-	top: 49px;
-	left: 40px;
+	position: absolute;
+	z-index: 12;
 	color: #ffffff;
+	margin-left: 4.5%;
+	margin-top: 2.5%;
 	line-height: 0.8;
+}
+.Bar1000value{
+	margin-left: -15%;
 }
 .Bar2000{
 	position: absolute;
-	top: 168px;
-	left: 0px;
-	width: 79px;
-	height: 28px;
+	margin-top: 9%;
+	margin-left: 0%;
+	width: 4%;
+	padding-bottom: 1.5%;
 	background-color: #8AAD64;
 	opacity: 1;
 }
 .Bar2000:before{
 	position: absolute;
 	content: "";
-	top: 0px;
-	left: 0px;
-	z-index: 11;
-	width: 186px;
-	height: 28px;
+	width: 250%;
+	padding-bottom: 37.5%;
 	background-color:#8AAD64;
 	opacity: 0.2;
 	
 }
 .Bar2000content{
 	position: absolute;
-	top: 133px;
-	left: 79px;
-	width: 700px;
+	z-index: 12;
 	color: #ffffff;
+	margin-left: 10.5%;
+	margin-top: 7%;
 	line-height: 0.8;
 	
 }
+.Bar2000value{
+	margin-left: -25%;
+}
 .Bar5000{
 	position: absolute;
-	top: 252px;
-	left: 0px;
-	width: 186px;
-	height: 28px;
+	margin-top: 13.5%;
+	margin-left: 0%;
+	width: 10%;
+	padding-bottom: 1.5%;
 	background: #B9CA70 0% 0% no-repeat padding-box;
 	opacity: 1;
 	
@@ -182,32 +173,31 @@
 .Bar5000:before{
 	position: absolute;
 	content: "";
-	top: 0px;
-	left: 0px;
-	z-index: 11;
-	width: 375px;
-	height: 28px;
+	width: 200%;
+	padding-bottom: 15%;
 	opacity: 0.2;
 	background-color: #B9CA70;
 	
 }
 .Bar5000content{
 	position: absolute;
-	z-index: 13;
-	top: 217px;
-	left: 225px;
-	width: 600px;
+	z-index: 12;
 	color: #ffffff;
+	margin-left: 20.5%;
+	margin-top: 11.5%;
 	line-height: 0.8;
 	
+}
+.Bar5000value{
+	margin-left: -135%;
 }
 
 .Bar10000{
 	position: absolute;
-	top: 336px;
-	left: 0px;
-	width: 375px;
-	height: 28px;
+	margin-top: 18%;
+	margin-left: 0%;
+	width: 20%;
+	padding-bottom: 1.5%;
 	background: #C8B557 0% 0% no-repeat padding-box;
 	opacity: 1;
 	
@@ -216,29 +206,29 @@
 .Bar10000:before{
 	position: absolute;
 	content: "";
-	top: 0px;
-	left: 0px;
-	z-index: 11;
-	width: 705px;
-	height: 28px;
-	opacity: 0.25;
+	width: 200%;
+	padding-bottom: 7.5%;
+	opacity: 0.2;
 	background-color: #C8B557;
 	
 }
 .Bar10000content{
 	position: absolute;
-	top: 301px;
-	left: 626px;
-	width: 500px;
+	z-index: 12;
 	color: #ffffff;
+	margin-left: 40.5%;
+	margin-top: 16%;
 	line-height: 0.8;
 	
+}
+.Bar10000value{
+	margin-left: -75%;
 }
 .Bar10000mark{
 	position: absolute;
 	z-index: 13;
-	top: 271px;
-	left: 610px;
+	margin-top: 14.5%;
+	margin-left: 31.77%;
 	font-size: 46px;
 	transform: rotate(90deg);
 	color: #ffffff;
@@ -247,10 +237,10 @@
 
 .Bar70000{
 	position: absolute;
-	top: 420px;
-	left: 0px;
-	width: 705px;
-	height: 28px;
+	margin-top: 22.5%;
+	margin-left: 0%;
+	width: 36%;
+	padding-bottom: 1.5%;
 	background: #D7A23F 0% 0% no-repeat padding-box;
 	opacity: 1;
 }
@@ -258,30 +248,29 @@
 .Bar70000:before{
 	position: absolute;
 	content: "";
-	top: 0px;
-	left: 0px;
-	z-index: 11;
-	width: 1035px;
-	height: 28px;
+	width: 150%;
+	padding-bottom: 4.5%;
 	opacity: 0.3;
 	background-color: #D7A23F;
 	
 }
 .Bar70000content{
 	position: absolute;
-	z-index: 13;
-	top: 385px;
-	width: 500px;
-	left: 890px;
+	z-index: 12;
 	color: #ffffff;
+	margin-left: 54.5%;
+	margin-top: 20.5%;
 	line-height: 0.8;
 	
+}
+.Bar70000value{
+	margin-left: -100%;
 }
 .Bar70000mark{
 	position: absolute;
 	z-index: 13;
-	top: 355px;
-	left: 920px;
+	margin-top: 19%;
+	margin-left: 47.91%;
 	font-size: 46px;
 	transform: rotate(90deg);
 	color: #ffffff;
@@ -289,10 +278,10 @@
 }
 .Bar100000{
 	position: absolute;
-	top: 504px;
-	left: 0px;
-	width: 1035px;
-	height: 28px;
+	margin-top: 27%;
+	margin-left: 0%;
+	width: 54%;
+	padding-bottom: 1.5%;
 	background: #E4912B 0% 0% no-repeat padding-box;
 	opacity: 1;
 }
@@ -300,30 +289,29 @@
 .Bar100000:before{
 	position: absolute;
 	content: "";
-	top: 0px;
-	left: 0px;
-	z-index: 11;
-	width: 1400px;
-	height: 28px;
+	width: 135%;
+	padding-bottom: 2.75%;
 	opacity: 0.3;
 	background-color: #E4912B;
 	
 }
 .Bar100000content{
 	position: absolute;
-	z-index: 13;
-	top: 469px;
-	left: 1240px;
-	width: 450px;
+	z-index: 12;
 	color: #ffffff;
-	line-height: 0.6;
+	margin-left: 73.5%;
+	margin-top: 24%;
+	line-height: 1.2;
 	
+}
+.Bar100000value{
+	margin-left: -65%;
 }
 .Bar100000mark{
 	position: absolute;
 	z-index: 13;
-	top: 439px;
-	left: 1280px;
+	margin-top: 23.5%;
+	margin-left: 66.67%;
 	font-size: 46px;
 	transform: rotate(90deg);
 	color: #ffffff;
