--- a/網頁/AttackPage/AttackPagePart1.css
+++ b/網頁/AttackPage/AttackPagePart1.css
@@ -3,23 +3,27 @@
 
 .bg1{
 	position: absolute;
-	z-index: 0;
-	left: 0px;
-	top: 0px;
+	width: 100%;
+	top: 0%;
+	left: 0%;
+	z-index: -1;
 }
 
 .P2Title{
 	position: absolute;
 	z-index: 1;
-	left: 60px;
-	top: 500px;
+	margin-left: 3.125%;
+	margin-top:  31.29%;
+	width: 60%;
 	font-size: 136px;
 	font-weight: bold;
+	line-height: 0;
 }
 .P2SubTitle{
 	position: absolute;
 	z-index: 1;	
-	top: 280px;
 	font-size: 38px;
 	color: #BF5B00;
+	line-height: 0;
+	margin-top: -5%;
 }
