--- a/網頁/AttackPage/AtackPagePart3.css
+++ b/網頁/AttackPage/AtackPagePart3.css
@@ -22,7 +22,7 @@
 	margin-top: -2%;
 	width: 26.04%;
 	color: #ffffff;
-	font-size: 48px;
+	font-size: 4rem;
 	font-weight: bold;
 	text-align: center;
 }
@@ -38,7 +38,7 @@
 }
 .indoorpra{
 	position: absolute;
-	font-size: 24px;
+	font-size: 2rem;
 	width: 100%;
 	margin-left: 75%;
 	margin-top: -40%;
@@ -53,7 +53,7 @@
 	margin-left: 62.5%;
 	color: #ffffff;
 	font-weight: 400;
-	font-size: 18px;
+	font-size: 1.5rem;
 }
 .LongtimeShapeRT{
 	position: absolute;
@@ -229,7 +229,7 @@
 	z-index: 13;
 	margin-top: 14.5%;
 	margin-left: 31.77%;
-	font-size: 46px;
+	font-size: 4rem;
 	transform: rotate(90deg);
 	color: #ffffff;
 	
@@ -271,7 +271,7 @@
 	z-index: 13;
 	margin-top: 19%;
 	margin-left: 47.91%;
-	font-size: 46px;
+	font-size: 4rem;
 	transform: rotate(90deg);
 	color: #ffffff;
 	
@@ -312,7 +312,7 @@
 	z-index: 13;
 	margin-top: 23.5%;
 	margin-left: 66.67%;
-	font-size: 46px;
+	font-size: 4rem;
 	transform: rotate(90deg);
 	color: #ffffff;
 	
