--- a/網頁/AttackPage/AtackPagePart4.css
+++ b/網頁/AttackPage/AtackPagePart4.css
@@ -14,223 +14,196 @@
 }
 .SDC1BA{
 	position: absolute;
-	left: 1800px;
-	top: 50px;
-	width: 72px;
-	height: 78px;
+	margin-left: 93%;
+	margin-top: 10%;
+	width:4.79%;	
 	opacity: 0;
 }
 .SDC2BA{
 	position: absolute;
-	left: 1800px;
-	top: 50px;
-	width: 72px;
-	height: 78px;
+	margin-left: 93%;
+	margin-top: 10%;
+	width:4.79%;	
 	opacity: 0;
 }
 .SDC3BA{
 	position: absolute;
-	left: 1800px;
-	top: 50px;
-	width: 72px;
-	height: 78px;
+	margin-left: 93%;
+	margin-top: 10%;
+	width:4.79%;	
 	opacity: 0;
 }
 .SDC4BA{
 	position: absolute;
-	left: 1800px;
-	top: 50px;
-	width: 72px;
-	height: 78px;
+	margin-left: 93%;
+	margin-top: 10%;
+	width:4.79%;	
 	opacity: 0;
 }
 .OAC1BA{
 	position: absolute;
-	left: 1800px;
-	top: 50px;
-	width: 72px;
-	height: 78px;
+	margin-left: 93%;
+	margin-top: 10%;
+	width:4.79%;	
 	opacity: 0;
 }
 .OAC2BA{
 	position: absolute;
-	left: 1800px;
-	top: 50px;
-	width: 72px;
-	height: 78px;
+	margin-left: 93%;
+	margin-top: 10%;
+	width:4.79%;	
 	opacity: 0;
 }
 .OAC3BA{
 	position: absolute;
-	left: 1800px;
-	top: 50px;
-	width: 72px;
-	height: 78px;
+	margin-left: 93%;
+	margin-top: 10%;
+	width:4.79%;	
 	opacity: 0;
 }
 .OAC4BA{
 	position: absolute;
-	left: 1800px;
-	top: 50px;
-	width: 72px;
-	height: 78px;
+	margin-left: 93%;
+	margin-top: 10%;
+	width:4.79%;	
 	opacity: 0;
 }
 .MIC1BA{
 	position: absolute;
-	left: 1800px;
-	top: 50px;
-	width: 72px;
-	height: 78px;
+	margin-left: 93%;
+	margin-top: 10%;
+	width:4.79%;	
 	opacity: 0;
 }
 .MIC2BA{
 	position: absolute;
-	left: 1800px;
-	top: 50px;
-	width: 72px;
-	height: 78px;
+	margin-left: 93%;
+	margin-top: 10%;
+	width:4.79%;	
 	opacity: 0;
 }
 .MIC3BA{
 	position: absolute;
-	left: 1800px;
-	top: 50px;
-	width: 72px;
-	height: 78px;
+	margin-left: 93%;
+	margin-top: 10%;
+	width:4.79%;	
 	opacity: 0;
 }
 .MIC4BA{
 	position: absolute;
-	left: 1800px;
-	top: 50px;
-	width: 72px;
-	height: 78px;
+	margin-left: 93%;
+	margin-top: 10%;
+	width:4.79%;	
 	opacity: 0;
 }
 .FFCBA{
 	position: absolute;
 	z-index: 20;
-	left: 1830px;
-	top: 150px;
-	width: 72px;
-	height: 78px;
+	margin-left: 93%;
+	margin-top: 10%;
+	width:4.79%;	
 	opacity: 0;
 }
 .HWCBA{
 	position: absolute;
-	z-index: 20;
-	left: 1830px;
-	top: 150px;
-	width: 72px;
-	height: 78px;
+	z-index: 20;;
+	margin-left: 93%;
+	margin-top: 10%;
+	width:4.79%;	
 	opacity: 0;
 }
 
 .ECCBA{
 	position: absolute;
 	z-index: 20;
-	left: 1830px;
-	top: 150px;
-	width: 72px;
-	height: 78px;
+	margin-left: 93%;
+	margin-top: 10%;
+	width:4.79%;	
 	opacity: 0;
 }
 .DSC1BA{
 	position: absolute;
-	left: 1800px;
-	top: 50px;
-	width: 72px;
-	height: 78px;
+	margin-left: 93%;
+	margin-top: 10%;
+	width:4.79%;	
 	opacity: 0;
 }
 .DSC2BA{
 	position: absolute;
-	left: 1800px;
-	top: 50px;
-	width: 72px;
-	height: 78px;
+	margin-left: 93%;
+	margin-top: 10%;
+	width:4.79%;	
 	opacity: 0;
 }
 .DSC3BA{
 	position: absolute;
-	left: 1800px;
-	top: 50px;
-	width: 72px;
-	height: 78px;
+	margin-left: 93%;
+	margin-top: 10%;
+	width:4.79%;	
 	opacity: 0;
 }
 .DSC4BA{
 	position: absolute;
-	left: 1800px;
-	top: 50px;
-	width: 72px;
-	height: 78px;
+	margin-left: 93%;
+	margin-top: 10%;
+	width:4.79%;	
 	opacity: 0;
 }
 .FSC1BA{
 	position: absolute;
-	left: 1800px;
-	top: 50px;
-	width: 72px;
-	height: 78px;
+	margin-left: 93%;
+	margin-top: 10%;
+	width:4.79%;	
 	opacity: 0;
 }
 .FSC2BA{
 	position: absolute;
-	left: 1800px;
-	top: 50px;
-	width: 72px;
-	height: 78px;
+	margin-left: 93%;
+	margin-top: 10%;
+	width:4.79%;	
 	opacity: 0;
 }
 .FSC3BA{
 	position: absolute;
-	left: 1800px;
-	top: 50px;
-	width: 72px;
-	height: 78px;
+	margin-left: 93%;
+	margin-top: 10%;
+	width:4.79%;	
 	opacity: 0;
 }
 .FSC4BA{
 	position: absolute;
-	left: 1800px;
-	top: 50px;
-	width: 72px;
-	height: 78px;
+	margin-left: 93%;
+	margin-top: 10%;
+	width:4.79%;	
 	opacity: 0;
 }
 
 .ESC1BA{
 	position: absolute;
-	left: 1800px;
-	top: 50px;
-	width: 72px;
-	height: 78px;
+	margin-left: 93%;
+	margin-top: 10%;
+	width:4.79%;	
 	opacity: 0;
 }
 .ESC2BA{
 	position: absolute;
-	left: 1800px;
-	top: 50px;
-	width: 72px;
-	height: 78px;
+	margin-left: 93%;
+	margin-top: 10%;
+	width:4.79%;	
 	opacity: 0;
 }
 .ESC3BA{
 	position: absolute;
-	left: 1800px;
-	top: 50px;
-	width: 72px;
-	height: 78px;
+	margin-left: 93%;
+	margin-top: 10%;
+	width:4.79%;	
 	opacity: 0;
 }
 .ESC4BA{
 	position: absolute;
-	left: 1800px;
-	top: 50px;
-	width: 72px;
-	height: 78px;
+	margin-left: 93%;
+	margin-top: 10%;
+	width:4.79%;	
 	opacity: 0;
 }
 
@@ -2174,8 +2147,8 @@
 .FFCAmazon{
 	position: absolute;
 	z-index: 17;
-	margin-top: 30.56%;
-	margin-left: 58.4%;
+	margin-top: 30.6%;
+	margin-left: 58.56%;
 	width: 7.18%;
 	color: #ffffff;
 	opacity: 0;
@@ -2246,8 +2219,8 @@
 .FFCNAEUJP{
 	position: absolute;
 	z-index: 17;
-	margin-top: 20.25%;
-	margin-left: 44.75%;
+	margin-top: 20.28%;
+	margin-left: 44.8%;
 	width: 32.92%;
 	height: 60px;
 	font-size: 2.2rem;
@@ -2325,8 +2298,8 @@
 .FFCSBL{
 	position: absolute;
 	z-index: 17;
-	margin-top: 17.1%;
-	margin-left: 75%;
+	margin-top: 17.3%;
+	margin-left: 75.1%;
 	width: 24.95%;
 	font-size: 2.2rem;
 	opacity: 0;
@@ -2391,8 +2364,8 @@
 .FFCAus{
 	position: absolute;
 	z-index: 17;
-	margin-top: 34.1%;
-	margin-left: 88.2%;
+	margin-top: 34.2%;
+	margin-left: 88.3%;
 	width: 6.2%;
 	font-size: 2.2rem;
 	opacity: 0;
