--- a/網頁/AttackPage/AttackPagePart1.css
+++ b/網頁/AttackPage/AttackPagePart1.css
@@ -15,14 +15,14 @@
 	margin-left: 3.125%;
 	margin-top:  31.29%;
 	width: 60%;
-	font-size: 136px;
+	font-size: 11.33rem;
 	font-weight: bold;
 	line-height: 0;
 }
 .P2SubTitle{
 	position: absolute;
 	z-index: 1;	
-	font-size: 38px;
+	font-size: 3.16rem;
 	color: #BF5B00;
 	line-height: 0;
 	margin-top: -5%;
