--- a/網頁/AttackPage/AttackPageAll.css
+++ b/網頁/AttackPage/AttackPageAll.css
@@ -104,6 +104,8 @@ button{
 	width: 100%;
 	padding-bottom: 56%;
 	background-color: transparent;
+	overflow-x: hidden;
+
 }
 .view5{
 	font-family: Gen Jyuu Gothic ;
