--- a/網頁/AttackPage/AttackPageAll.css
+++ b/網頁/AttackPage/AttackPageAll.css
@@ -104,7 +104,7 @@ button{
 	width: 100%;
 	padding-bottom: 56%;
 	background-color: transparent;
-	overflow-x: hidden;
+	overflow: hidden;
 
 }
 .view5{
